fix page shift down from q7 quiz_form_style.css

--- a/styles/quiz_form_style.css
+++ b/styles/quiz_form_style.css
@@ -10,7 +10,7 @@ h1, h2, h3{
 }
 
 h2{
-  text-align: center;
+  text-align: center; 
 }
 
 p {
@@ -232,7 +232,8 @@ button:hover {
   margin-top: 25px;
   margin-left: 15%;
   background-color: #4fa84a;
-  height: 40vw;
+  /*height: 40vw;*/
+  height: 500px;
   color: #f5f2e1;
   width: 70%;
   justify-self: center;
